--- a/doc/TODO
+++ b/doc/TODO
@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.17472 2017/06/20 11:37:00 wiz Exp $
+$NetBSD: TODO,v 1.17473 2017/06/21 17:36:01 maya Exp $
 
 Suggested new packages
 ======================
@@ -1140,6 +1140,7 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o opensmtpd-6.0.0
 	o openssl-1.1.0
 	o openvas-libraries-8.0.8
+	o openvpn-2.4.3
 	o opera-26
 	o oroborus-2.0.18
 	o ortp-0.25.0
